New approach to handling duplicate values. Validation added to check for duplicates, but they are preserved for the duration of editing.

--- a/options_element/options_element.css
+++ b/options_element/options_element.css
@@ -8,7 +8,7 @@ div.options-widget .draggable a.tabledrag-handle {
   padding-right: .5em /* RTL */
 }
 
-input.form-options-value {
+input.option-value {
   width: 60%;
   margin-right: 10px; /* RTL */
 }
