Adding "hidden" element CSS, alphabetizing field CSS.

--- a/form_builder.css
+++ b/form_builder.css
@@ -260,23 +260,11 @@ div.form-builder-new-field span.progress {
   color: black;
 }
 
-#form-builder-field-palette ul li.field-textfield {
-  background-image: url(images/fields/textfield.png);
-}
-#form-builder-field-palette ul li.field-radios {
-  background-image: url(images/fields/radios.png);
+#form-builder-field-palette ul li.field-body_field {
+  background-image: url(images/fields/body.png);
 }
 #form-builder-field-palette ul li.field-checkboxes {
   background-image: url(images/fields/checkboxes.png);
-}
-#form-builder-field-palette ul li.field-number {
-  background-image: url(images/fields/number.png);
-}
-#form-builder-field-palette ul li.field-textarea {
-  background-image: url(images/fields/textarea.png);
-}
-#form-builder-field-palette ul li.field-select {
-  background-image: url(images/fields/select.png);
 }
 #form-builder-field-palette ul li.field-fieldset {
   background-image: url(images/fields/fieldset.png);
@@ -285,24 +273,39 @@ div.form-builder-new-field span.progress {
 #form-builder-field-palette ul li.field-upload_settings {
   background-image: url(images/fields/file.png);
 }
+#form-builder-field-palette ul li.field-hidden {
+  background-image: url(images/fields/hidden.png);
+}
 #form-builder-field-palette ul li.field-image {
   background-image: url(images/fields/image.png);
-}
-#form-builder-field-palette ul li.field-taxonomy {
-  background-image: url(images/fields/taxonomy.png);
 }
 #form-builder-field-palette ul li.field-menu_settings {
   background-image: url(images/fields/menu.png);
 }
+#form-builder-field-palette ul li.field-number {
+  background-image: url(images/fields/number.png);
+}
 #form-builder-field-palette ul li.field-path_settings {
   background-image: url(images/fields/path.png);
 }
-#form-builder-field-palette ul li.field-title {
-  background-image: url(images/fields/title.png);
-}
-#form-builder-field-palette ul li.field-body_field {
-  background-image: url(images/fields/body.png);
+#form-builder-field-palette ul li.field-radios {
+  background-image: url(images/fields/radios.png);
 }
 #form-builder-field-palette ul li.field-revision_information {
   background-image: url(images/fields/revisions.png);
+}
+#form-builder-field-palette ul li.field-select {
+  background-image: url(images/fields/select.png);
+}
+#form-builder-field-palette ul li.field-taxonomy {
+  background-image: url(images/fields/taxonomy.png);
+}
+#form-builder-field-palette ul li.field-textarea {
+  background-image: url(images/fields/textarea.png);
+}
+#form-builder-field-palette ul li.field-textfield {
+  background-image: url(images/fields/textfield.png);
+}
+#form-builder-field-palette ul li.field-title {
+  background-image: url(images/fields/title.png);
 }
