--- a/form_builder.css
+++ b/form_builder.css
@@ -248,6 +248,7 @@ div.form-builder-new-field span.progress {
   background: white none no-repeat 6px center;
   padding: 2px 2px 2px 28px;
   border: 1px solid #999;
+  margin: 2px;
   float: left;
   width: 80px;
   font-size: 11px;
