--- a/form_builder.css
+++ b/form_builder.css
@@ -297,6 +297,9 @@ div.form-builder-new-field span.progress {
 #form-builder-field-palette ul li.field-checkboxes {
   background-image: url(images/fields/checkboxes.png);
 }
+#form-builder-field-palette ul li.field-date {
+  background-image: url(images/fields/date.png);
+}
 #form-builder-field-palette ul li.field-email {
   background-image: url(images/fields/email.png);
 }
