--- a/form_builder.css
+++ b/form_builder.css
@@ -310,6 +310,9 @@ div.form-builder-new-field span.progress {
 #form-builder-field-palette ul li.field-upload_settings {
   background-image: url(images/fields/file.png);
 }
+#form-builder-field-palette ul li.field-grid {
+  background-image: url(images/fields/grid.png);
+}
 #form-builder-field-palette ul li.field-hidden {
   background-image: url(images/fields/hidden.png);
 }
