Issue #1373712 by mrconnerton: Component tabs need relative positioning in Rubik theme.

--- a/form_builder.css
+++ b/form_builder.css
@@ -202,6 +202,7 @@ span.form-builder-links a.progress:hover {
   margin: 0;
   padding: 0;
   float: left; /* RTL */
+  position: relative;
 }
 
 #form-builder ul.form-builder-tabs li {
