--- a/form_builder.css
+++ b/form_builder.css
@@ -122,6 +122,7 @@ div.form-builder-placeholder {
   margin-top: -30px;
   position: absolute;
   width: 100%;
+  border: 1px solid blue;
 }
 div.form-builder-placeholder-last {
   height: 200px;
